# rules_proto_grpc_csharp_issue

./: .bazelrc  BUILD.bazel  Program.cs  README.md  WORKSPACE  contract.proto  grpc_extensions.proto  nuget.bzl
.github/workflows/: main.yaml
nuget/: .gitignore  gen.sh  nuget.bzl
