load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "csharp_binary")
load("@rules_proto_grpc//csharp:defs.bzl", "csharp_grpc_compile")

csharp_binary(
    name = "server.exe",
    srcs = [
        "Program.cs",
        ":contract",
    ],
    nowarn = [
        "CS1701",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # SDKs
        "@core_sdk_stdlib//:Microsoft.AspNetCore.App",
        "@core_sdk_stdlib//:NETStandard.Library",
        "@core_sdk_stdlib//:libraryset",

        # Dependencies
        "@grpc.aspnetcore//:lib",
    ],
)

csharp_grpc_compile(
    name = "contract",
    protos = [
        ":contract_proto",
    ],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "contract_proto",
    srcs = ["contract.proto"],
    deps = [":grpc_extensions_proto"],
)

proto_library(
    name = "grpc_extensions_proto",
    srcs = ["grpc_extensions.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)
